doc for delete hard log
